<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">打的宝</string>
    <string name="tip_note">我愿意并承诺在标准租车资费之上自愿再支付司机小费。点击+1,+2,+5调整小费多少，点击"清零"取消</string>
    <string name="txtTipLowAmount">￥5</string>
    <string name="plus1">+1</string>
    <string name="plus2">+2</string>
    <string name="plus5">+5</string>
    <string name="btnDisembarkAndRateText">下车点评</string>
 	<string name="use_branded_taxi_only">只要品牌出租车</string>
	<string name="show_taxi_brands">看品牌表&#8230;</string>
	<string name="txtFrom">我的上车地点</string>
	<string name="txtSelect">选择 >></string>
	<string name="txtTo">我的下车地点</string>
	<string name="txtCondition">我的选车条件</string>
	<string name="txtAccount">我的帐号</string>
	<string name="dadi_id_note">打的号是系统为您自动分配的唯一编号。为防止上错车，上车前司机会和您核对这个号码。如果您需要换手机，请记下这个号码。您的打的记录都存在这个打的号下面。良好的记录会帮您更快找到车。</string>
	<string name="my_dadi_id">我的打的号：%1$s</string>
	<string name="my_password">我的密码：%1$s</string>
	<string name="dadi_password_note">系统为您随机预设了一个密码。为了防止别人冒用，请尽早设置您自己的密码。只有系统为您预设的密码才会显示，您自己设置的密码将不会显示。</string>
	<string name="use_another_dadi_id_password">使用另一个打的号和密码</string>
	<string name="change_password">修改密码</string>
	<string name="pause_resume_use">%1$s使用这个打的号</string>
	<string name="selected_city">我在 %1$s 打车</string>
	<string name="select_city_note">系统已经根据您现在的位置为您选定了一个城市。如果错了，请在下列已经开通服务的城市中选择一个。</string>
	<string name="beijing">北京</string>
	<string name="shanghai">上海</string>
	<string name="guangzhou">广州</string>
	<string name="shenzhen">深圳</string>
	<string name="please_click_and_setup">点击进入设置</string>
	<string name="known_user_id_not_login">%1$s，您尚未登录</string>
	<string name="already_login">%1$s，您已登录，欢迎使用打的宝</string>
	<string name="please_pick_a_city">请选择在哪个城市打车</string>
	<string name="not_login">尚未登录</string>
	<string name="click_to_reconnect">点击尝试连接服务器</string>
	<string name="not_decided">还未选定</string>
	<string name="login_in_progress">登录中&#8230;</string>
	<string name="input_from_hint">手工输入上车地点</string>
	<string name="fail_to_login">登录失败，请检查网络</string>
	<string name="you_have_not_entered_address">您好没有输入地点</string>
	<string name="asap">尽快</string>
	<string name="time">时间</string>
	<string name="time_note">尽快：要求尽快来车，但是不要求一定要在指定时间内到；其他：要求一定在10、15、30分钟内到，否则不要</string>
	<string name="taxi_brand">出租车品牌</string>
	<string name="tips">小费:%1$s元</string>
	<string name="clear_to_zero">清零</string>
	<string name="taxi_brand_note">打的宝要求会员司机提供其真实的所属出租公司品牌，如果您发现来车的品牌不符，请举报。建议您只用有品牌的正规出租车。不使用这个选项会提供等找到更多的车。</string>
	<string name="condition_format">时间：%1$s，只是用品牌出租车：%2$s，小费：%3$d元</string>
	<string name="within_minutes">%1$d分钟内</string>
	<string name="yes">是</string>
	<string name="no">否</string>
</resources>