<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:paddingBottom="10dp" android:paddingLeft="2dp" android:paddingRight="2dp" android:paddingTop="10dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxi_brand"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxi_brand_note"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/use_branded_taxi_only" android:layout_weight="1" android:checked="true"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_taxi_brands" android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>